--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,17 @@ development:
   database: db/development.sqlite3
   pool: 5
   timeout: 5000
-
+  
+#development:
+ # adapter: postgresql
+  #encoding: unicode
+  #database: blog_development
+  #pool: 5
+  #username: blog
+  #password:
+   #min_messages: WARNING
+   
+   
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
